--- a/style.css
+++ b/style.css
@@ -26,6 +26,17 @@ body {
     font-size: 1.2rem;
 }
 
+.branding {
+    text-align: center;
+    margin-top: 20px;
+}
+
+.branding h2 {
+    font-size: 2.5rem;
+    color: #1db954;
+    font-weight: 600;
+}
+
 .player-container {
     display: flex;
     flex-direction: column;
@@ -41,6 +52,7 @@ body {
     width: 300px;
     height: 300px;
     border-radius: 5px;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
 }
 
 .song-info {
@@ -94,53 +106,8 @@ body {
     border-radius: 2.5px;
 }
 
-.cd-container {
-    margin-top: 30px;
-    position: relative;
-    width: 250px;
-    height: 250px;
-}
-
-.cd {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 100%;
-    height: 100%;
-    background-color: #1db954;
-    border-radius: 50%;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
-    animation: rotateCd 3s linear infinite;
-}
-
-.cd-inner {
-    width: 80%;
-    height: 80%;
-    background-color: #191414;
-    margin: 10% auto;
-    border-radius: 50%;
-    position: relative;
-}
-
-.cd-album-art {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 50%;
-}
-
 @keyframes fadeIn {
     to {
         opacity: 1;
-    }
-}
-
-@keyframes rotateCd {
-    0% {
-        transform: rotate(0deg);
-    }
-    100% {
-        transform: rotate(360deg);
     }
 }
